--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,8 @@ stages:
           steps:
           - script: echo Deploy in Develop environment
 
-- stage: 'DeployRelease'
-  displayName: 'Deploy application in qa env'
+- stage: 'DeployQa'
+  displayName: 'Deploy Release'
   jobs: 
   - deployment: 'DeployQa'
     displayName: 'Deploy Qa Env'
@@ -64,13 +64,18 @@ stages:
           steps:
           - script: echo Deploy in Qa environment
 
+- stage: 'FunctionalTest'
+  displayName: 'Functional Testing'
+  jobs:
   - job: 'RunFunctionalTest'
-    displayName: 'Functional test & verify Quality Gates'
-    
+    displayName: 'Functional test & verify Quality Gates'    
     steps:
     - script: echo functional test
     - script: echo Verify Quality Gates
 
+ stage: 'DeployPrd'
+  displayName: 'Deploy Prd'
+  jobs:
   - deployment: 'DeployPrd'
     displayName: 'Deploy Prd Env Job'
     environment: 'Produccion'
