--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,10 +102,10 @@ stages:
     displayName: 'Merge release in master'    
     steps:
     - script: |
-        git checkout master
-        git merge ${{ variables.Build.SourceBranch }}
-  - job: 'GitTag'
+        git checkout main
+        git merge $(Build.SourceBranch)
+  - job: 'TagMain'
     displayName: 'Tag master'    
     steps:
     - script: |
-        git tag ${{ variables.Build.SourceBranchName }} -m 'Tag by Azure Pipeline'
+        git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
