--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,10 +102,9 @@ stages:
     displayName: 'Merge release in master'    
     steps:
     - script: |
+        git config --global user.email "azure@pipelines.com"
+        git config --global user.name "Azure Pipelines"
         git checkout main
-        git merge $(Build.SourceBranch)
-  - job: 'TagMain'
-    displayName: 'Tag master'    
-    steps:
-    - script: |
+        git merge --squash release/$(Build.SourceBranchName)
+        git commit -m 'Squash Merge release $(Build.SourceBranchName)'
         git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
