--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,7 +104,8 @@ stages:
     - script: |
         git config --global user.email "azure@pipelines.com"
         git config --global user.name "Azure Pipelines"
-        git checkout main
-        git merge --squash release/$(Build.SourceBranchName)
+        git checkout origin/main
+        git merge --squash origin/release/$(Build.SourceBranchName)
         git commit -m 'Squash Merge release $(Build.SourceBranchName)'
         git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
+        git push origin/master
