--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,8 +106,11 @@ stages:
       displayName: 'Merge to master'
       inputs:
         script: |
+          git config --global user.email "azure@pipelines.com"
+          git config --global user.name "azure pipelines"
+          git fetch
           git checkout main
-          git merge --squash release/$(Build.SourceBranchName)
+          git merge --squash origin/release/$(Build.SourceBranchName)
           git commit -m 'Squash Merge release $(Build.SourceBranchName)'
           git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
           git push
