--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,8 +106,8 @@ stages:
       displayName: 'Merge to master'
       inputs:
         script: |
-          git config --global user.email "azure@pipelines.com"
-          git config --global user.name "azure pipelines"
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
           git fetch
           git checkout main
           git merge --squash origin/release/$(Build.SourceBranchName)
