--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,12 +102,11 @@ stages:
     displayName: 'Merge release and tag in master'    
     steps:
     - checkout: self
+      persistCredentials: true
     - task: CmdLine@2
       displayName: 'Merge to master'
       inputs:
         script: |
-          git config --global user.email "nikospina9611@gmail.com"
-          git config --global user.name "nikospina"
           git fetch
           git checkout main
           git merge --squash origin/release/$(Build.SourceBranchName)
