--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,6 +112,4 @@ stages:
           git merge --squash origin/release/$(Build.SourceBranchName)
           git commit -m 'Squash Merge release $(Build.SourceBranchName)'
           git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
-          git push
-          git push --tag
-          git status
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git --tags
