--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,6 +107,8 @@ stages:
       displayName: 'Merge to master'
       inputs:
         script: |
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
           git fetch
           git checkout main
           git merge --squash origin/release/$(Build.SourceBranchName)
