--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -113,5 +113,6 @@ stages:
           git checkout main
           git merge --squash origin/release/$(Build.SourceBranchName)
           git commit -m 'Squash Merge release $(Build.SourceBranchName)'
-          git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline'
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
+          git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline' 
           git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git --tags
