--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,24 +15,22 @@ stages:
       vmImage: 'ubuntu-16.04'
       demands:
        - npm
-
     variables:
       wwwrootDir: 'wwwroot'
       
     steps:
-    - script: 'echo "build"'
+    - script: echo build
         
   - job: 'RunUnitTest'
-    displayName: 'Unit Test & Coverage Job'
-    
+    displayName: 'Unit Test & Coverage Job'    
     steps:
-    - script 'echo "unit test"'
+    - script: echo unit test
 
-- stage: 'Deploy'
-  displayName: 'Deploy application'
+- stage: 'DeployDev'
+  displayName: 'Deploy Dev'
   jobs: 
-  - job: 'DeployDev'
-    displayName: 'Deploy Dev Env Job'
+  - deployment: 'DeployDev'
+    displayName: 'Deploy Dev'
     environment: 'Desarrollo'
     condition: |
       and(
@@ -40,34 +38,81 @@ stages:
       ne(variables['Build.Reason'], 'PullRequest'),
       eq(variables['Build.SourceBranchName'], 'develop')
       )
-    steps:
-    - script: 'echo "Deploy in Develop environment"'
-      displayName: 'Updating Develop Deployment Version'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy in Develop environment
 
-  - job: 'DeployQa'
-    displayName: 'Deploy Qa Env Job'
+- stage: 'DeployQa'
+  displayName: 'Deploy Qa'
+  jobs: 
+  - deployment: 'DeployQa'
+    displayName: 'Deploy Qa Env'
     environment: 'Calidad'
     condition: |
       and(
       succeeded(),
       ne(variables['Build.Reason'], 'PullRequest'),
-      startsWith(variables['Build.SourceBranchName'], 'release')
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
       )
-    steps:
-    - script: 'echo "Deploy in Qa environment"'
-      displayName: 'Updating Qa Deployment Version'
-    - script: 'echo "exec functional testig and Quality Gates its Ok"'
-      displayName: 'Functional tests and verify Quality Gates'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy in Qa environment
 
-  - job: 'DeployPrd'
+- stage: 'FunctionalTest'
+  displayName: 'Functional Testing'
+  condition: |
+      and(
+      succeeded(),
+      ne(variables['Build.Reason'], 'PullRequest'),
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
+      )
+  jobs:
+  - job: 'RunFunctionalTest'
+    displayName: 'Functional test & verify Quality Gates'    
+    steps:
+    - script: echo functional test
+    - script: echo Verify Quality Gates
+
+- stage: 'DeployPrd'
+  displayName: 'Deploy Prd'
+  jobs:
+  - deployment: 'DeployPrd'
     displayName: 'Deploy Prd Env Job'
     environment: 'Produccion'
     condition: |
       and(
       succeeded(),
       ne(variables['Build.Reason'], 'PullRequest'),
-      startsWith(variables['Build.SourceBranchName'], 'release')
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
       )
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Deploy in Prd environment
+
+- stage: 'UpdateMaster'
+  displayName: 'Update master'
+  jobs:
+  - job: 'MergeRelease'
+    displayName: 'Merge release and tag in master'    
     steps:
-    - script: 'echo "Deploy in Prd environment"'
-      displayName: 'Updating Prd Deployment Version'  
+    - checkout: self
+      persistCredentials: true
+    - task: CmdLine@2
+      displayName: 'Merge to master'
+      inputs:
+        script: |
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
+          git fetch
+          git checkout main
+          git merge --squash origin/release/$(Build.SourceBranchName)
+          git commit -m 'Squash Merge release $(Build.SourceBranchName)'
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
+          git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline' 
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git --tags
