--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ variables:
   
 stages:
 - stage: 'Build'
-  displayName: 'Build the web application'
+  displayName: 'Continuous Itegration'
   jobs: 
   - job: 'Build'
     displayName: 'Build job'
@@ -95,8 +95,8 @@ stages:
           steps:
           - script: echo Deploy in Prd environment
 
-- stage: 'UpdateMaster'
-  displayName: 'Update master'
+- stage: 'UpdateRepo'
+  displayName: 'Update Repo'
   jobs:
   - job: 'MergeRelease'
     displayName: 'Merge release and tag in master'    
@@ -116,3 +116,14 @@ stages:
           git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
           git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline' 
           git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git --tags
+    - task: CmdLine@2
+      displayName: 'Merge to develop'
+      inputs:
+        script: |
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
+          git fetch
+          git checkout develop
+          git merge --squash origin/release/$(Build.SourceBranchName)
+          git commit -m 'Squash Merge release $(Build.SourceBranchName)'
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
