--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ variables:
   
 stages:
 - stage: 'Build'
-  displayName: 'Build the web application'
+  displayName: 'Continuous Itegration'
   jobs: 
   - job: 'Build'
     displayName: 'Build job'
@@ -15,7 +15,6 @@ stages:
       vmImage: 'ubuntu-16.04'
       demands:
        - npm
-
     variables:
       wwwrootDir: 'wwwroot'
       
@@ -28,7 +27,7 @@ stages:
     - script: echo unit test
 
 - stage: 'DeployDev'
-  displayName: 'Deploy application in dev env'
+  displayName: 'Deploy Dev'
   jobs: 
   - deployment: 'DeployDev'
     displayName: 'Deploy Dev'
@@ -55,7 +54,7 @@ stages:
       and(
       succeeded(),
       ne(variables['Build.Reason'], 'PullRequest'),
-      startsWith(variables['Build.SourceBranchName'], 'release')
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
       )
     strategy:
       runOnce:
@@ -69,7 +68,7 @@ stages:
       and(
       succeeded(),
       ne(variables['Build.Reason'], 'PullRequest'),
-      startsWith(variables['Build.SourceBranchName'], 'release')
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
       )
   jobs:
   - job: 'RunFunctionalTest'
@@ -88,10 +87,48 @@ stages:
       and(
       succeeded(),
       ne(variables['Build.Reason'], 'PullRequest'),
-      startsWith(variables['Build.SourceBranchName'], 'release')
+      startsWith(variables['Build.SourceBranch'], 'refs/heads/release')
       )
     strategy:
       runOnce:
         deploy:
           steps:
           - script: echo Deploy in Prd environment
+
+- stage: 'UpdateRepo'
+  displayName: 'Update Repo'
+  jobs:
+  - job: 'MergeReleaseInMaster'
+    displayName: 'Merge release in master'    
+    steps:
+    - checkout: self
+      persistCredentials: true
+    - task: CmdLine@2
+      displayName: 'Merge to master'
+      inputs:
+        script: |
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
+          git fetch
+          git checkout main
+          git merge --squash origin/release/$(Build.SourceBranchName)
+          git commit -m 'Squash Merge release $(Build.SourceBranchName)'
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
+          git tag $(Build.SourceBranchName) -m 'Tag by Azure Pipeline' 
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git --tags
+  - job: 'MergeReleaseInDevelop'
+    displayName: 'Merge release in develop'    
+    steps:
+    - checkout: self
+      persistCredentials: true
+    - task: CmdLine@2
+      displayName: 'Merge to master'
+      inputs:
+        script: |
+          git config --global user.email "nikospina9611@gmail.com"
+          git config --global user.name "nikospina"
+          git fetch
+          git checkout develop
+          git merge --squash origin/release/$(Build.SourceBranchName)
+          git commit -m 'Squash Merge release $(Build.SourceBranchName)'
+          git push https://$(gitUser):$(gitPass)@github.com/nikospina/DevOps-Pipeline.git
