--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,7 +122,7 @@ stages:
     - checkout: self
       persistCredentials: true
     - task: CmdLine@2
-      displayName: 'Merge to master'
+      displayName: 'Merge to develop'
       inputs:
         script: |
           git config --global user.email "nikospina9611@gmail.com"
