Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,11 @@ stages:
           cliProjectKey: 'Test-DevOps'
           cliProjectName: 'Test-DevOps'
           cliSources: '.'
+          extraProperties: |
+            # Additional properties that will be passed to the scanner, 
+            # Put one key=value per line, example:
+            # sonar.exclusions=**/*.bin
+            sonar.branch.name=main
       - task: SonarQubeAnalyze@4
       - task: SonarQubePublish@4
         inputs:
