--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "scripts": {
-    "test": "mocha test --reporter mocha-junit-reporter"
+    "test": "mocha test --reporter mocha-junit-reporter",
+    "lint": "eslint ./",
+	"lint:fix": "eslint ./ --fix"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.2.0",
     "mocha-junit-reporter": "^2.0.0",
-    "sinon": "^9.2.0"
+    "sinon": "^9.2.0",
+    "typescript": "^4.0.5"
   }
 }
