--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,14 +40,18 @@ stages:
     displayName: 'SonarQube Scanner'
     steps:
       - script: echo SonarQube Scanner
-      - script: |
-          curl https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.5.0.2216.zip --output sonarInstall.zip
-          unzip sonarInstall.zip
-        displayName: Install Sonar Scanner
-      - script: |
-          ./sonar-scanner-4.5.0.2216/bin/sonar-scanner -Dsonar.projectKey=Test-DevOps -Dsonar.sources=. -Dsonar.host.url=http://54.92.154.189:9000 -Dsonar.login=db2c19be53af58f692f2ae2827fbbadab8e1a058
-        displayName: Sonar Scanner Run
-        
+      - task: SonarQubePrepare@4
+        inputs:
+          SonarQube: 'SonarQube'
+          scannerMode: 'CLI'
+          configMode: 'manual'
+          cliProjectKey: 'Test-DevOps'
+          cliProjectName: 'Test-DevOps'
+          cliSources: '.'          
+      - task: SonarQubeAnalyze@4
+      - task: SonarQubePublish@4
+        inputs:
+          pollingTimeoutSec: '300'
 - stage: 'DeployDev'
   displayName: 'Deploy Dev'
   jobs: 
