Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,12 @@ stages:
           configMode: 'manual'
           cliProjectKey: 'Test-DevOps'
           cliProjectName: 'Test-DevOps'
-          cliSources: '.'          
+          cliSources: '.'
+          extraProperties: |
+            # Additional properties that will be passed to the scanner, 
+            # Put one key=value per line, example:
+            # sonar.exclusions=**/*.bin
+            sonar.branch.name=$(Build.SourceBranchName)
       - task: SonarQubeAnalyze@4
       - task: SonarQubePublish@4
         inputs:
