--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "test": "mocha test --reporter mocha-junit-reporter",
+    "test": "nyc --reporter=lcov --reporter=text-summary mocha test --reporter mocha-junit-reporter",
     "lint": "eslint ./",
-	"lint:fix": "eslint ./ --fix"
+    "lint:fix": "eslint ./ --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -12,6 +12,7 @@
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.2.0",
     "mocha-junit-reporter": "^2.0.0",
+    "nyc": "^15.1.0",
     "sinon": "^9.2.0",
     "typescript": "^4.0.5"
   }
