--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,13 @@ stages:
           curl https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.5.0.2216.zip --output sonarInstall.zip
           unzip sonarInstall.zip
         displayName: Install Sonar Scanner
+      - task: NodeTool@0 
+      inputs:
+        versionSpec: 12.x
+      - script: npm install
+      - script: npm test
       - script: |
-          ./sonar-scanner-4.5.0.2216/bin/sonar-scanner -Dsonar.projectKey=Test-DevOps -Dsonar.sources=. -Dsonar.host.url=http://54.92.154.189:9000 -Dsonar.javascript.lcov.reportPaths=**/lcov.info -Dsonar.login=db2c19be53af58f692f2ae2827fbbadab8e1a058
+          ./sonar-scanner-4.5.0.2216/bin/sonar-scanner -Dsonar.projectKey=Test-DevOps -Dsonar.sources=. -Dsonar.host.url=http://54.92.154.189:9000 -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info -Dsonar.login=db2c19be53af58f692f2ae2827fbbadab8e1a058
         displayName: Sonar Scanner Run
         
 - stage: 'DeployDev'
