Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,9 +36,10 @@ stages:
         testRunner: JUnit
         testResultsFiles: '**/test-results.xml'
     - task: PublishCodeCoverageResults@1
-      inputs:
-        codeCoverageTool: 'JaCoCo'
-        summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/index.html'
+      inputs: 
+        codeCoverageTool: JaCoCo
+        summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*index.html'
+        reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'
   
   - job: 'SonarQubeScanner'
     displayName: 'SonarQube Scanner'
